--- a/index.html
+++ b/index.html
@@ -1,54 +1,76 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>郭廷锴的个人主页</title>
-	</head>
-	<link rel="stylesheet" type="text/css" href="./css/layout.css" />
-	<body>
-		<div class="containner">
-			<div class="tite"></div>
-			<div class="banner">
-				<ul id="qh">
-					<li> Welcome</li>
-					<li> 生活明朗，万物可爱</li>
-					<li> 生活原本沉闷，但跑起来就有风</li>
-					<li> 吹不出褶的平静日子，也在闪光</li>
-					<li> 保持热爱，奔赴山海</li>
-					<li> 前路浩浩荡荡，万事尽可期待</li>
-					<li> 但行好事，莫问前程</li>
-					<li> 去更远的地方，见更亮的光</li>
-					<li> 我们的征途是星辰大海</li>
-					<li> 做世界的水手，奔赴所有港口</li>
-					<li> 来日方长，何惧车遥马慢</li>
-				</ul>
-			</div>
-			<div class="left">
-				<div class="jianjie">
-					<iframe src="nav/weljianjie.html" frameborder="no" border="0"
-					width="100%" height="500px" name="nav"></iframe>
-				</div>
-				<div class="daohang">
-					<p><a href="#0" onclick="parent.nav.location='nav/weljianjie.html'; parent.main.location='pages/welcome.html'; return false;" >主页</a></p>
-					<p><a href="#2" onclick="parent.nav.location='nav/grjjnav.html'; parent.main.location='pages/grjj.html'; return false;" >个人简介</a></p>
-					<p><a href="#3" onclick="parent.nav.location='nav/xqahnav.html'; parent.main.location='pages/xqah.html'; return false;" >兴趣爱好</a></p>
-					<p><a href="#4" onclick="parent.nav.location='nav/xxjlnav.html'; parent.main.location='pages/xxjl.html'; return false;" >学习经历</a></p>
-				</div>
-				
-			</div>
-			<div class="right">
-				<iframe src="pages/welcome.html" frameborder="no" border="0" 
-				width="100%" height="100%" name="main"></iframe>
-			</div>
-			<div class="footer">
-				谢谢你这么可爱还来看我！
-			</div>
-		</div>
-	</body>
-	<script type="text/javascript">
-		function xx(){
-			var jh=document.getElementById("qh");
-			jh.appendChild(qh.firstChild);
-		}setInterval("xx()",1200);
-	</script>
+<head>
+	<meta charset="utf-8">
+	<title>首页</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+<nav>
+	<a href="">欢迎参观第一届嘉庚码农作品展</a>
+	<a href="">关于嘉庚学院</a>
+	<a href="">课程介绍</a>
+</nav>
+<div class="image">
+	<img src="img/title.png">
+</div>
+<div class="students">
+	<a href=""><div class="name female">陈煜煜</div></a>
+	<a href=""><div class="name female">任恩娴</div></a>
+	<a href=""><div class="name female">林心泳</div></a>
+	<a href=""><div class="name female">芦月秋</div></a>
+	<a href=""><div class="name male">顾润东</div></a>
+	<a href=""><div class="name male">钟坤杉</div></a>
+	<a href=""><div class="name male">许玮龙</div></a>
+	<a href=""><div class="name male">洪煌炜</div></a>
+	<a href=""><div class="name male">郭廷锴</div></a>
+	<a href=""><div class="name male">陈雨桐</div></a>
+	<a href=""><div class="name male">徐翔宇</div></a>
+	<a href=""><div class="name male">詹子杰</div></a>
+	<a href=""><div class="name male">李宝龙</div></a>
+	<a href=""><div class="name male">张寓杰</div></a>
+	<a href=""><div class="name male">陈金山</div></a>
+	<a href=""><div class="name male">陶泽华</div></a>
+	<a href=""><div class="name male">叶泓</div></a>
+	<a href=""><div class="name male">刘启元</div></a>
+	<a href=""><div class="name male">叶一帆</div></a>
+	<a href=""><div class="name male">洪喜发</div></a>
+	<a href=""><div class="name male">苏玮皓</div></a>
+	<a href=""><div class="name male">吴睿迪</div></a>
+	<a href=""><div class="name male">彭应湖</div></a>
+	<a href=""><div class="name male">单逾鹏</div></a>
+	<a href=""><div class="name male">栾旭</div></a>
+	<a href=""><div class="name female">冯丽竹</div></a>
+	<a href=""><div class="name male">李奕</div></a>
+	<a href=""><div class="name female">吴菲菲</div></a>
+	<a href=""><div class="name female">张琳</div></a>
+	<a href=""><div class="name male">吴泽怀</div></a>
+	<a href=""><div class="name male">陈晨辉</div></a>
+	<a href=""><div class="name male">刘家宝</div></a>
+	<a href=""><div class="name female">翁元婕</div></a>
+	<a href=""><div class="name male">陈卓</div></a>
+	<a href=""><div class="name male">周奇浩</div></a>
+	<a href=""><div class="name female">杨歆漪</div></a>
+	<a href=""><div class="name male">何承羽</div></a>
+	<a href=""><div class="name female">董思涵</div></a>
+	<a href=""><div class="name female">张鸿艳</div></a>
+	<a href=""><div class="name male">赖运营</div></a>
+	<a href=""><div class="name female">陈晓霜</div></a>
+	<a href=""><div class="name male">肖隽纬</div></a>
+	<a href=""><div class="name female">赖似莹</div></a>
+	<a href=""><div class="name female">许文静</div></a>
+	<a href=""><div class="name female">罗静雯</div></a>
+	<a href=""><div class="name male">李鹏飞</div></a>
+	<a href=""><div class="name female">金琦</div></a>
+	<a href=""><div class="name male">王明哲</div></a>
+	<a href=""><div class="name male">潘嘉禾</div></a>
+	<a href=""><div class="name male">林一飞</div></a>
+	<a href=""><div class="name male">赖江涛</div></a>
+	<a href=""><div class="name male">黄郑国</div></a>
+	<a href=""><div class="name male">白丛源</div></a>
+	<a href=""><div class="name female">郝菁</div></a>
+	<a href=""><div class="name male">赵一宸</div></a>
+	<a href=""><div class="name">&nbsp;</div></a>
+</div>
+</body>
 </html>
